--- a/public/front-theme/css/style.css
+++ b/public/front-theme/css/style.css
@@ -1096,3 +1096,6 @@ select.form-control{
   border: 1px solid solid black!important;
 }
 
+
+/* Prevent reverse order on small screens */
+/* Prevent reverse order on small screens */
