--- a/public/front-theme/css/responsive.css
+++ b/public/front-theme/css/responsive.css
@@ -59,7 +59,7 @@
   }
 
   .about_section .row {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .about_section .detail-box {
