--- a/public/adminth/css/style.css
+++ b/public/adminth/css/style.css
@@ -327,3 +327,10 @@
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+
+/* ******************************************************** */
+.create_blog input, .create_blog textarea{
+    border-color: grey!important;
+    border-radius: 7px!important;
+} 
